--- a/33-line-react-calendar.html
+++ b/33-line-react-calendar.html
@@ -9,6 +9,7 @@
     <script src="33-line-react.js"></script>
 </head>
 <body>
+    <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <p>
         Inspect the nodes in devtools to show the DOM elements are being updated efficiently.
         <div id="calendar"></div>
