--- a/33-line-react.html
+++ b/33-line-react.html
@@ -17,6 +17,7 @@
     <script src="33-line-react.js"></script>
 </head>
 <body>
+    <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <h1>33 line React</h1>
     <p>
         <em><a href="33-line-react-thoughts.html">Thoughts</a> on reading through the hacker news <a href="https://news.ycombinator.com/item?id=22776753">response</a>.</em>
