--- a/fake-data-frame.html
+++ b/fake-data-frame.html
@@ -1,4 +1,4 @@
-  
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <title>leontrolski - FakeDataFrame</title>
@@ -15,6 +15,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+    <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <h1>How do pandas DataFrames work? (kinda)</h1>
     <p>
         When you're used to plain ol' <code>dict</code>s, <code>int</code>s, <code>list</code>s etc, <code>pandas.DataFrame</code>s exhibit some weirdo behaviour, particulary concerning assignment and operators. This page is a short walk-through of how some of these things happen (and a quick intro to Python's magic methods), you can see the outcome <a href="https://github.com/leontrolski/fake-data-frame">here</a>.
