--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <head>
     <title>leontrolski - index</title>
     <style>
-        .row{display: flex;}
-        .block{width:100px;height:50px;float:left;background-color:red;}
         body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
         @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
         code {background: #f0f0f0;}
@@ -12,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Hi</h1>
+    <a><img style="height:2em" src="pic.png"/></a>
     <p>
         I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com
     </p>
@@ -45,6 +43,10 @@
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
+    <style>
+        .row {display: flex;}
+        .block {width:100px;height:50px;float:left;background-color:red;}
+    </style>
     <script src="33-line-react.js"></script>
     <script>
 var width = 8
