--- a/poor-mans-object.html
+++ b/poor-mans-object.html
@@ -14,6 +14,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+    <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <h1>Making python style class system from rudimentary javascript</h1>
     <p>
         It's been said many times before, <a href="https://wiki.c2.com/?ClosuresAndObjectsAreEquivalent">objects are a poor man's closures are a poor man's objects</a>, I thought I'd try bring that home by implementing a limited bit of the python object system with a small subset of javascript.
@@ -170,7 +171,7 @@ const d = makeDict([
     <p>
         Test it in the console, wahoo, it works!
     </p>
-    
+
     <h3>Bonus section</h3>
     <p>
         Now, just for good measure, let's add inheritance:
