--- a/33-line-react-thoughts.html
+++ b/33-line-react-thoughts.html
@@ -15,6 +15,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+    <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <h1>33 line React - thoughts</h1>
     <p>
         <em><a href="33-line-react.html">Original post</a>, <a href="https://news.ycombinator.com/item?id=22776753">original discussion</a>.</em>
