--- a/33-line-react.html
+++ b/33-line-react.html
@@ -36,7 +36,7 @@
         In this post, I'm going to make the smallest React-like thing that can do the above. It's very <a href="https://mithril.js.org/">mithril</a> influenced.
     </p>
     <p>
-        Here is a sample <a href="33-line-react-calendar.html">calendar picker application</a> that uses the <a href="https://github.com/leontrolski/leontrolski.github.io/blob/master/33-line-react.js">library</a>.
+        Here are sample applications: <a href="33-line-react-calendar.html">calendar picker</a>, <a href="33-line-react-snake.html">snake</a> that use the <a href="https://github.com/leontrolski/leontrolski.github.io/blob/master/33-line-react.js">library</a>.
     </p>
     <p>
         <em>Lots of the code looks pretty code-golfy - I promise I don't do stuff like this at work, neither should you :-)</em>
