--- a/fake-data-frame.html
+++ b/fake-data-frame.html
@@ -3,18 +3,17 @@
 <head>
     <title>leontrolski - FakeDataFrame</title>
     <style>
-        body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 63%;}
+        body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 63%;}
         @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
-        code {background: #f0f0f0;}
         pre {width: 100%; border-top: 3px solid gray; border-bottom: 3px solid gray;}
-        a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
+        a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;text-shadow: 0 1px 0 #ffffff;}
         a:hover {border-bottom: 0;}
     </style>
-    <link rel="stylesheet" href="https://unpkg.com/highlightjs@9.16.2/styles/default.css"></style>
-    <script src="https://unpkg.com/highlightjs@9.16.2/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <link href="https://unpkg.com/prism-themes@1.4.0/themes/prism-vs.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/plugins/autoloader/prism-autoloader.min.js"></script>
 </head>
-<body>
+<body class="language-python">
     <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <h1>How do pandas DataFrames work? (kinda)</h1>
     <p>
