--- a/33-line-react-thoughts.html
+++ b/33-line-react-thoughts.html
@@ -67,7 +67,7 @@
         </ul>
         There are alleged performance/codebase management reasons for some of these, but I remain a bit sceptical of their applicability to "normal" sized web applications.
     </p>
-    <h3>Ezz-thetic</h3>
+    <h3 id="ezzthetic">Ezz-thetic</h3>
     <p>
         To my eyes, the original mithril <a href="https://raw.githack.com/MithrilJS/mithril.js/master/examples/todomvc/todomvc.js">TodoMVC source</a> is exceptionally expressive and handsome, especially versus the equivalent React <a href="https://github.com/tastejs/todomvc/tree/gh-pages/examples/react">example</a>. Maybe I'm turning into Arthur Whitney, but I'm kind of enjoying long, dense lines like:
     </p>
