--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
         I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com
     </p>
     <p>
-        Check out my <a href="https://soundcloud.com/leontrolski/sets/american-songbook">album</a>.
-    </p>
-    <p>
         Here are a series of posts where I reimplement a minimal version of something to demonstrate how it works.
         <ul>
             <li>33 line <a href="33-line-react.html">React</a>-like library, and <a href="33-line-react-thoughts.html">followup</a></li>
@@ -26,10 +23,15 @@
         </ul>
     </p>
     <p>
-        Here are some random thoughts.
+        Here are some other thoughts.
         <ul>
-            <li><a href="nested-sql.html">Here</a> is a piece about potential nested SQL queries</li>
+            <li>A piece about potential <a href="nested-sql.html">nested SQL queries</a></li>
+            <li><a href="contrair-articles.html">Contrair articles</a> countering certain premises</li>
+            <li>What if we'd had <a href="dom-syntax.html">nice html-in-js syntax</a> from the beginning?</li>
         </ul>
+    </p>
+    <p>
+        Check out my <a href="https://soundcloud.com/leontrolski">music</a>.
     </p>
     <p>
         Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
