--- a/nested-sql.html
+++ b/nested-sql.html
@@ -98,4 +98,4 @@ VALUES
         <li>Have I missed some other obvious features that would be super useful?</li>
         <li>Someone else <em>must</em> have described nearly the same as above in some other forum - it doesn't seem particularly novel.</li>
     </ul>
-
+</body>
