--- a/dom-syntax.html
+++ b/dom-syntax.html
@@ -193,7 +193,7 @@ app.get('/', (req, res) => res.send(myUl().asHTMLStr())</code></pre>
             We wouldn't have had the years of weird logic-in-html stuff like in <a href="https://knockoutjs.com/">knockout</a> (remember that one?)
             <pre><code>&lt;button data-bind="enable: myItems().length &lt; 5">Add&lt;/button></code></pre>
             <p>
-                Or <a href="https://knockoutjs.com/">Vue</a> (remember that one?)
+                Or <a href="https://vuejs.org/">Vue</a> (remember that one?)
             </p>
             <pre><code>&lt;span v-bind:title="message"></code></pre>
         </li>
