--- a/dom-syntax.html
+++ b/dom-syntax.html
@@ -16,7 +16,7 @@
     <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <h1>What if we'd had better <code>html</code>-in-<code>js</code> syntax all along?</h1>
     <p>
-        I have a theory that a grave mistake was made in 1995 - the decision not to have a neat, succinct and declarative way of representing html elements in javascript. <em>[On reading the <a href="https://news.ycombinator.com/item?id=23142300">hacker news comments</a> this is pretty historically innacurate, however, I think this article still stands as "look just how close javascript object notation is to a reasonable way of representing html".]</em>
+        I have a theory that a grave mistake was made in 1995 - the decision not to have a neat, succinct and declarative way of representing html elements in javascript. <em>[On reading the <a href="https://news.ycombinator.com/item?id=23142300">hacker news comments</a> this is pretty historically inaccurate, however, I think this article still stands as "look just how close javascript object notation is to a reasonable way of representing html".]</em>
     </p>
     <p>
         In this post, I'm going to describe the current state of affairs, show a couple of very small additions to javascript's syntax that might've made all the difference, then talk about the repercussions.
