--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
         a:hover {border-bottom: 0;}
     </style>
+    <link rel="alternate" type="application/rss+xml" title="Subscribe to Leon Trolski" href="https://leontrolski.github.io/leontrolski.rss"/>
 </head>
 <body>
     <a><img style="height:2em" src="pic.png"/></a>
     <p>
-        I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com
+        I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com, subscribe via <a href="https://leontrolski.github.io/leontrolski.rss">rss</a>, read my <a href="oliver-russell-cv.pdf">CV</a>.
     </p>
     <p>
         Here are a series of posts where I reimplement a minimal version of something to demonstrate how it works.
