--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li>A piece about potential <a href="nested-sql.html">nested SQL queries</a></li>
             <li><a href="contrair-articles.html">Contrair articles</a> countering certain premises</li>
             <li>What if we'd had <a href="dom-syntax.html">nice html-in-js syntax</a> from the beginning?</li>
+            <li>A <a href="consciousness.html">summary</a> of the book "Consciousness and the Social Brain"</li>
         </ul>
     </p>
     <p>
