--- a/consciousness.html
+++ b/consciousness.html
@@ -31,10 +31,10 @@
 
     <h2>Define consciousness</h2>
     <p>
-        Everyone and their uncle has their own definition of consciousness, questions that get chucked around might include "how do I know that I'm someone distinct from the world?", "how are my memories formed?", "how do I experience the sweetness of the apple?" etc. Graziano starts us out by saying we should just focus on a more specific word: "awareness". In our brain, there is knowledge - <q>the apple is sweet</q>, <q>the traffic is loud</q>, <q>the memory was of a cat</q>, <q>my foot is in pain</q> - and then there is <em>awareness</em> of the knowledge - <q>I am aware of the apple's sweetness</q> etc.
+        Everyone and their uncle has their own definition of consciousness. Questions that get chucked around might include "how do I know that I'm someone distinct from the world?", "how are my memories formed?", "how do I experience the sweetness of the apple?" etc. Graziano starts us out by saying we should just focus on a more specific word: "awareness". In our brain, there is knowledge - <q>the apple is sweet</q>, <q>the traffic is loud</q>, <q>the memory was of a cat</q>, <q>my foot is in pain</q> - and then there is <em>awareness</em> of the knowledge - <q>I am aware of the apple's sweetness</q> etc.
     </p>
     <p>
-        This checks out intuitively, if you ask someone to <q>be especially consciousness for a bit</q> while they're eating an apple, they will likely focus in on their awareness of the sweetness/crunch etc. - we could similarly have asked <q>be especially aware for a bit</q>. By limiting our question to <q>what is awareness?</q> rather than <q>what is consciousness?</q>, we rid ourselves of a lot of baggage while remaining focused on the essence of the hard problem. Take for example a <a href="https://en.wikipedia.org/wiki/Philosophical_zombie">philosophical zombie</a>, would it be semantically zombie enough if it were never "aware" (as opposed to never "conscious")? If not and you think there's some other important aspect to the hard problem, this ain't the theory for you.
+        This checks out intuitively. If you ask someone to <q>be especially conscious for a bit</q> while they're eating an apple, they will likely focus in on their awareness of the sweetness/crunch etc. - we could similarly have asked <q>be especially aware for a bit</q>. By limiting our question to <q>what is awareness?</q> rather than <q>what is consciousness?</q>, we rid ourselves of a lot of baggage while remaining focused on the essence of the hard problem. Take for example a <a href="https://en.wikipedia.org/wiki/Philosophical_zombie">philosophical zombie</a>, would it be semantically zombie enough if it were never "aware" (as opposed to never "conscious")? If not and you think there's some other important aspect to the hard problem, this ain't the theory for you.
     </p>
     <p>
         How our brain might represent the knowledge itself that we are aware of (taste, memories etc.) is something distinct from awareness and we'll leave that for another bit of the neuroscience department.
@@ -42,7 +42,7 @@
 
     <h2>Graziano's squirrel</h2>
     <p>
-        Graziano's colleague had a patient that reported a squirrel in his head, he agreed that it was physically impossible, but nonetheless it was there (he was <em>really</em> certain). The easy problem is working out how the brain might represent the squirrel, its fur, claws, its location (in the patient's head), this is a knowledge representation problem. The hard problem (especially from the patient's perspective) is how the squirrel (with all its vivid real-ness) might be there at all, in his head.
+        Graziano's colleague had a patient that reported a squirrel in his head. He agreed that it was physically impossible, but nonetheless it was there (he was <em>really</em> certain). The easy problem is working out how the brain might represent the squirrel, its fur, claws, its location (in the patient's head), this is a knowledge representation problem. The hard problem (especially from the patient's perspective) is how the squirrel (with all its vivid real-ness) might be there at all, in his head.
     </p>
     <blockquote>
         If we all shared that man's delusion [...] we would be certain of its existence, [...] agree collectively that we have it [...] and yet we would have no way to jump from neuronal circuitry to squirrel. [...] We would be forced into the dualist position that the brain is somehow both a neuronal machine and, at the same time, on a higher plane, a squirrel.
@@ -53,7 +53,7 @@
 
     <h2>Graziano's awareness</h2>
     <p>
-        Graziano's colleague had a patient that reported awareness in their head, he agreed that it was physically impossible, but nonetheless it was there (he was <em>really</em> certain). The easy problem is working out how the brain might represent awareness, its vividness, its ethereal nature, its location (in the patient's head)...
+        Graziano's colleague had a patient that reported awareness in their head. He agreed that it was physically impossible, but nonetheless it was there (he was <em>really</em> certain). The easy problem is working out how the brain might represent awareness, its vividness, its ethereal nature, its location (in the patient's head)...
     </p>
     <p>
         <em>You get the idea...</em>
@@ -74,7 +74,7 @@ Neuronal information
         A lot of theories only consider arrow <q>A</q> - <q>how does awareness arise?</q> (maybe it arises from complexity somehow, like heat?)
     </p>
     <p>
-        Given that we can report awareness, there must also exist an arrow <q>B</q>, information about awareness must eventually reach the neurons that operate our vocal chords. This leads us to ask - how does awareness then impact the neuronal machinery? Most theories consider <q>A</q> to be magical, but once you consider there <em>must</em> be an arrow <q>B</q>, and that the brain is an information processing machine, the simplest theory is that awareness <em>is</em> just an informational description in the brain.
+        Given that we can report awareness, there must also exist an arrow <q>B</q>: information about awareness must eventually reach the neurons that operate our vocal chords. This leads us to ask - how does awareness then impact the neuronal machinery? Most theories consider <q>A</q> to be magical, but once you consider there <em>must</em> be an arrow <q>B</q>, and that the brain is an information processing machine, the simplest theory is that awareness <em>is</em> just an informational description in the brain.
     </p>
     <p>
         Descriptions have the nice property of being able to describe even impossible, magical things (eg. Middle Earth) and so are a good fit for awareness. An uncontroversial example of a nonsensical thing our brain describes would be white light, we consider it to be a pure, low-colour thing, whereas we know from Newton that it's a muddy, many-coloured smush.
@@ -108,10 +108,10 @@ Neuronal information
 
     <h2>The social bit</h2>
     <p>
-        It is uncontroversial that we create models of others' attention (via their gaze, their facial expression, their previous behaviour etc), this is useful for predicting their behaviour and therefore serves an obvious evolutionary purpose. What if our awareness is the same kind of thing, but about ourselves rather than others? Now we have something falsifiable that we can apply our evidence to, if this were to be true, the same bits of brain would be buzzing in both cases and if that bit of brain were damaged, so would awareness.
+        It is uncontroversial that we create models of others' attention (via their gaze, their facial expression, their previous behaviour etc) - this is useful for predicting their behaviour and therefore serves an obvious evolutionary purpose. What if our awareness is the same kind of thing, but about ourselves rather than others? Now we have something falsifiable that we can apply our evidence to, if this were to be true, the same bits of brain would be buzzing in both cases and if that bit of brain were damaged, so would awareness.
     </p>
     <p>
-        It turns out there are bits of the brain that look likely candidates. As we're assuming a programmer audience rather than a biologist audience, we'll name them - the TPJ and STS - and leave it at that.
+        It turns out there are bits of the brain that look likely candidates - the TPJ and STS. As we're assuming a programmer audience rather than a biologist audience, we won't worry what these stand for.
     </p>
     <p>
         The brain (like lots of software) has weird feedback loops and mucky system boundaries, awareness and attention are deeply bound and one may accentuate the other. I am aware of something, that may boost a top-down attention bias, that itself boosts my attention of it, that attention triggers more awareness etc. Obviously, when building a model of someone else's attention, these feedback loops don't exist. Combine this with the far richer information we receive about ourselves and we get some way to explaining why the model of <em>our</em> attention is so much more complete than that of others.
